SQuirreL SQL Client Change Log
==============================


${squirrelsql.changelog.header}


Enhancements:

Hibernate Plugin: Improved display of mapped objects in table cells:
                  Class name, primary key and toString() ist displayed instead of toString() only.


DB-Diff-Plugin:
  Allowed to compare tables within one Session the same way as with different Sessions using select and
  compare of the Object tree's right mouse menu. It is still possible to compare tables inside the
  same Session without using select by marking two tables and just using the compare.

Feature request 3129413: The number of decimal digits are now configurable (See Global Preferences --> 'Data Type Controls')

Feature requests 3001253, 2896494: New icons in Object tree

Display errors in result tab:
  SQL execution errors are now additionally displayed in a temporary result tab.
  - This new feature is switched on by default and can be switched off in
    Menu File --> New Session Properties --> Tab SQL --> Show SQL execution errors in result tab.
  - Along with this feature comes a new Message Panel right mouse menu "Save size 0" that allows
    to hide the Message panel at application start up.

Bug-fixes:

3238037: It's impossible to create a foreign key in oracle 10g, if some tables contains a / in their name eg. recycle bins

Now, "Press to open logs" shows  the current log file by default instead of a random one.

3222350: Cannot enter negative values for numeric fields when editing the result table.

3196153: When typing using shift, you must release shift to type space

3088572: Squirrel fails when user tries to edit DB fields which have particular characters.

3175871: On export to Excel, some numeric values are not exported correctly.  

SQL Scripts Plugin: Increased multi table script configuration dialog's size.

3171762: Wrong syntax for DROP KEY (When qualify table name preference is selected this produced two schema